<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="horizontal"
    tools:context=".MotorControl">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/motorEnable"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="sans-serif-thin"
                android:text="@string/motorEnable"
                android:textColor="@color/lightGray"
                app:thumbTint="@color/colorPrimary"
                app:trackTint="@color/colorAccent"
                tools:text="@string/motorEnable" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/motorDirection"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="sans-serif-thin"
                android:text="@string/motorDirection"
                android:textColor="@color/lightGray"
                app:thumbTint="@color/colorPrimary"
                app:trackTint="@color/colorAccent"
                tools:text="@string/motorDirection" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/rpmInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="right"
                android:paddingRight="8dp"
                android:text="@string/motorRPM"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/lightGray" />

            <TextView
                android:id="@+id/rpmValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                tools:text="10 (rpm)" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/rpmInput"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="50"
            android:min="5"
            android:orientation="horizontal"
            android:progress="10"
            app:layout_constraintBottom_toTopOf="@+id/motorState"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.7" />

        <Button
            android:id="@+id/applyMotorConfig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-thin"
            android:text="@string/applyButton"
            android:textColor="@color/lightGray"
            app:layout_constraintBottom_toTopOf="@+id/motorState"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/applyButton" />

        <ToggleButton
            android:id="@+id/motorState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:checked="false"
            android:fontFamily="sans-serif-thin"
            android:text="@string/motorRun"
            android:textColor="@color/lightGray"
            android:textOff="@string/motorRunOff"
            android:textOn="@string/motorRunOn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/motorControlTitle"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/lightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>