<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".CoolingControl">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E1E1E">

        <Button
            android:id="@+id/applyCooling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-thin"
            android:text="@string/applyButton"
            android:textColor="@color/lightGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/coolingControlTitle"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/lightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="HeatSinkFan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/lightGray" />

                <TextView
                    android:id="@+id/HSFValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    tools:text="24%" />

                <TextView
                    android:id="@+id/HSTmpAct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/lightGray"
                    tools:text="Temperature: 80 (C)" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/HeatSinkFanInput"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/HeatSinkFanDisplay"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="200"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:progress="24" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="@string/NozzleFan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/lightGray" />

                <TextView
                    android:id="@+id/NFValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:text="NFValue"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    tools:text="47%" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/NozzleFanInput"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>